# CATTI

./: Makefile  README.md  catti-example.cpp  catti-plugin.cpp  destokenizer.sh  tokenizer.sh
Test/: 1gram.gram  pathswg.lst  test  wg.paths
Test/lats/: ZS-I-1901-236_2_02_01_r2_r2l1.lat
casmacat/: Context.h  IAlignmentEngine.h  ICommand.h  IConfidenceEngine.h  IDictionaryEngine.h  IHtrEngine.h  IImtEngine-segmentacion.h  IImtEngine.h  IMtEngine-segmentacion.h  IMtEngine.h  IPluginFactory.h  ITextProcessor.h  IUpdateable.h  IWeightUpdateEngine.h  IWordGraph.h  IWordPriorityEngine.h  Logger.h  Makefile  Makefile.am  Makefile.in  NotImplementedException.h  PerlVM.h  Plugin.h  PluginExtension.h  Range.h  compat.h  config.h  config.h.in~  plugin-utils.h  stamp-h1  utils.h
wg/: CAT.c  CAT.h  Makefile  auxiliar.c  auxiliar.h  dictionary.c  dictionary.h  dynamic_list.c  dynamic_list.h  dynamic_ordered_list.c  dynamic_ordered_list.h  ecparser.c  ecparser.h  entropy.c  entropy.h  global.h  hash.c  hash.h  heap.c  heap.h  librefx.c  librefx.h  main.c  nbestsuffix.c  nbestsuffix.h  server.c  sfst.c  sfst.h  strokes_decode.sh  strop.c  strop.h  vector.c  vector.h  wg  word_graph.c  word_graph.h  zipio.c  zipio.h
wg/lat-parser/: Makefile  lat-driver.h  lat-flex.c  lat-flex.h  lat-parser.h  lat-parser.y  lat-scanner.l
