# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = compat.h config.h IAlignmentEngine.h IDictionaryEngine.h IConfidenceEngine.h IWordPriorityEngine.h IImtEngine.h IMtEngine.h IHtrEngine.h IPluginFactory.h ITextProcessor.h IUpdateable.h IWeightUpdateEngine.h Logger.h NotImplementedException.h Plugin.h plugin-utils.h utils.h Context.h
